nextcloud-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose-nextcloud-k8s.yml convert
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: nextcloud-app
  name: nextcloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nextcloud-app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose-nextcloud-k8s.yml convert
        kompose.version: 1.37.0 (fb0539e64)
      labels:
        io.kompose.service: nextcloud-app
    spec:
      containers:
        - env:
            - name: LANG
              value: en_US.UTF-8
            - name: LANGUAGE
              value: en_US:en
            - name: LC_ALL
              value: en_US.UTF-8
            - name: LC_MESSAGES
              value: en_US.UTF-8
            - name: MYSQL_DATABASE
              value: nextcloud
            - name: MYSQL_HOST
              value: nextcloud-database
            - name: MYSQL_PASSWORD
              value: blabla5678
            - name: MYSQL_USER
              value: nextcloud
            - name: TZ
              value: Asia/Bangkok
          image: nextcloud:31.0.8-apache
          name: nextcloud-app
          ports:
            - containerPort: 80
              protocol: TCP
          tty: true
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-web
            - mountPath: /var/www/html/custom_apps
              name: nextcloud-apps
            - mountPath: /var/www/html/config
              name: nextcloud-config
            - mountPath: /var/www/html/data
              name: nextcloud-data
      restartPolicy: Always
      volumes:
        - name: nextcloud-web
          persistentVolumeClaim:
            claimName: nextcloud-web
        - name: nextcloud-apps
          persistentVolumeClaim:
            claimName: nextcloud-apps
        - name: nextcloud-config
          persistentVolumeClaim:
            claimName: nextcloud-config
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
