nextcloud-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose-nextcloud-k8s.yml convert
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: nextcloud-app
  name: nextcloud-app
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: nextcloud-app
