nextcloud-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host:   # Replace with your domain or use "*"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-app
                port:
                  number: 80
